tests/samples/positive/pointers/pointer_field_write.ax
module pointer_field_write;

struct Pair {
    value: i32;
}

fn as_mut_pair_ptr(value: &mut Pair) -> *mut Pair {
    return unsafe { ptrat<*mut Pair>(ptraddr(value)) };
}

fn main() -> i32 {
    var pair: Pair = Pair { value: 1 };
    let ptr: *mut Pair = as_mut_pair_ptr(&mut pair);
    unsafe {
        ptr.value = 42;
    }
    return pair.value - 42;
}
